# huragok

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.huragok/: README.md  batch.yaml  decisions.md  state.yaml
docs/: README.md  deployment.md  example-run.md  smoke-tests.md
docs/adr/: ADR-0001-huragok-orchestration.md
docs/claude-code-prompts/: slice-b1-prompt.md
docs/claude-code-prompts/docs-passes/: 2026-04-22-example-run-and-smoke-tests.md
docs/notes/: slice-b1-build-notes.md
docs/reference/: README.md
docs/reference/smoke-002-artifacts/: audit.jsonl  batch.yaml  goodbye.py  hello.py  test_goodbye.py  test_goodbye_acceptance.py  test_hello.py  test_hello_acceptance.py
docs/reference/smoke-002-artifacts/task-0001/: implementation.md  review.md  spec.md  status.yaml  tests.md
docs/reference/smoke-002-artifacts/task-0002/: implementation.md  review.md  spec.md  status.yaml  tests.md
orchestrator/: cli.py  pricing.yaml
orchestrator/budget/: __init__.py  pricing.py  rate_limit.py  tracker.py
orchestrator/notifications/: __init__.py  base.py  logging.py
orchestrator/session/: __init__.py  events.py  runner.py  stream.py
orchestrator/state/: __init__.py  schemas.py
orchestrator/supervisor/: __init__.py  loop.py  sd_notify.py  signals.py
tests/: test_cli.py
tests/budget/: test_pricing.py  test_rate_limit.py  test_tracker.py
tests/fixtures/: fake-claude.sh
tests/notifications/: test_base.py  test_logging.py
tests/session/: test_runner.py  test_stream.py
tests/supervisor/: conftest.py  test_cli_lifecycle.py  test_loop.py  test_sd_notify.py  test_signals.py  test_version_check.py
